{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 154,
  "lineage": "5974c813-021a-6b35-1c10-15ed0df16a5f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0541bf4f245b805e1"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0541bf4f245b805e1"
                ]
              }
            ],
            "id": "igw-03a9bd101ac843b4d",
            "internet_gateway_id": "igw-03a9bd101ac843b4d",
            "owner_id": "135928476890",
            "tags": {
              "Name": "thomasbriggs-gateway-public"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09f0478228932d57d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0158cf2f97227fd8a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0158cf2f97227fd8a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0f91d162e88e398d8",
            "private_dns": "ip-10-0-68-143.eu-west-1.compute.internal",
            "private_ip": "10.0.68.143",
            "public_dns": "ec2-34-254-89-187.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.254.89.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05b43e09cc1e0e5b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e792ac6d1bb65fc",
            "tags": {
              "Name": "elizabeth-engineering47-terraform-lesson"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09beb232ae91e42a4"
            ]
          },
          "dependencies": [
            "aws_instance.db_instance",
            "aws_security_group.app_security_group",
            "aws_subnet.app_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-049b0eb3c48e9b0e3",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-05034dd154a1a2e75",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05034dd154a1a2e75",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0e265ed09d52a9259",
            "private_dns": "ip-10-0-68-36.eu-west-1.compute.internal",
            "private_ip": "10.0.68.36",
            "public_dns": "ec2-52-19-225-190.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.225.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cb03489870e5a0ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e792ac6d1bb65fc",
            "tags": {
              "Name": "elizabeth-engineering47-db-terraform-lesson"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09beb232ae91e42a4"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069faa22bad41e010",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a9bd101ac843b4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lizzy-engineering47-app-route-table"
            },
            "vpc_id": "vpc-0541bf4f245b805e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assos",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006840f7b4a526b4b",
            "route_table_id": "rtb-069faa22bad41e010",
            "subnet_id": "subnet-04e792ac6d1bb65fc"
          },
          "dependencies": [
            "aws_route_table.app_route_table",
            "aws_subnet.app_private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-09beb232ae91e42a4",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09beb232ae91e42a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lizzy-app-security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_app_security_group_Elizabeth"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541bf4f245b805e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0a99b4fec4b45966c",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "id": "sg-0a99b4fec4b45966c",
            "ingress": [],
            "name": "lizzy-db-security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_db_security_group_Elizabeth"
            },
            "timeouts": null,
            "vpc_id": "vpc-0541bf4f245b805e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-04e792ac6d1bb65fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.68.0/24",
            "id": "subnet-04e792ac6d1bb65fc",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "elizabeth_subnet_private"
            },
            "vpc_id": "vpc-0541bf4f245b805e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0393ac0c29a725a29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.42.0/24",
            "id": "subnet-0393ac0c29a725a29",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "elizabeth_subnet_db_private"
            },
            "vpc_id": "vpc-0541bf4f245b805e1"
          }
        }
      ]
    }
  ]
}